tests/rosetta/transpiler/Scala/15-puzzle-solver.scala
// Generated by Mochi v0.10.37 on 2025-07-22 20:22:58 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def main(args: Array[String]): Unit = {
    println(testpkg.FifteenPuzzleExample())
  }
}
